--- a/OpenPowerCount.ioc
+++ b/OpenPowerCount.ioc
@@ -9,14 +9,17 @@ Mcu.IP3=USART1
 Mcu.IPNb=4
 Mcu.Name=STM32F030F4Px
 Mcu.Package=TSSOP20
-Mcu.Pin0=PA2
-Mcu.Pin1=PA3
-Mcu.Pin2=PA5
-Mcu.Pin3=PB1
-Mcu.Pin4=PA13
-Mcu.Pin5=PA14
-Mcu.Pin6=VP_SYS_VS_Systick
-Mcu.PinsNb=7
+Mcu.Pin0=PA0
+Mcu.Pin1=PA2
+Mcu.Pin2=PA3
+Mcu.Pin3=PA5
+Mcu.Pin4=PA6
+Mcu.Pin5=PA7
+Mcu.Pin6=PB1
+Mcu.Pin7=PA13
+Mcu.Pin8=PA14
+Mcu.Pin9=VP_SYS_VS_Systick
+Mcu.PinsNb=10
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F030F4Px
@@ -28,6 +31,11 @@ NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.SVC_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.SysTick_IRQn=true\:3\:0\:false\:false\:true\:false\:true
+PA0.GPIOParameters=GPIO_PuPd,GPIO_Label
+PA0.GPIO_Label=RESET
+PA0.GPIO_PuPd=GPIO_PULLUP
+PA0.Locked=true
+PA0.Signal=GPIO_Input
 PA13.Mode=Serial_Wire
 PA13.Signal=SYS_SWDIO
 PA14.Mode=Serial_Wire
@@ -36,15 +44,34 @@ PA2.Mode=Asynchronous
 PA2.Signal=USART1_TX
 PA3.Mode=Asynchronous
 PA3.Signal=USART1_RX
-PA5.GPIOParameters=GPIO_Label
-PA5.GPIO_Label=OK
+PA5.GPIOParameters=PinState,GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultOutputPP
+PA5.GPIO_Label=TimesCount
+PA5.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_PP
+PA5.GPIO_PuPd=GPIO_PULLUP
 PA5.Locked=true
+PA5.PinState=GPIO_PIN_SET
 PA5.Signal=GPIO_Output
-PB1.GPIOParameters=GPIO_PuPd,GPIO_Label
-PB1.GPIO_Label=RESET                                                                                                                                                                                                                       
+PA6.GPIOParameters=PinState,GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultOutputPP
+PA6.GPIO_Label=YearControl
+PA6.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_PP
+PA6.GPIO_PuPd=GPIO_PULLUP
+PA6.Locked=true
+PA6.PinState=GPIO_PIN_SET
+PA6.Signal=GPIO_Output
+PA7.GPIOParameters=PinState,GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultOutputPP
+PA7.GPIO_Label=Buzz
+PA7.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_PP
+PA7.GPIO_PuPd=GPIO_PULLUP
+PA7.Locked=true
+PA7.PinState=GPIO_PIN_SET
+PA7.Signal=GPIO_Output
+PB1.GPIOParameters=PinState,GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultOutputPP
+PB1.GPIO_Label=BlinkLed
+PB1.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_PP
 PB1.GPIO_PuPd=GPIO_PULLUP
 PB1.Locked=true
-PB1.Signal=GPIO_Input
+PB1.PinState=GPIO_PIN_SET
+PB1.Signal=GPIO_Output
 PinOutPanel.RotationAngle=0
 ProjectManager.AskForMigrate=true
 ProjectManager.BackupPrevious=false
@@ -84,4 +111,4 @@ USART1.VirtualMode-Asynchronous=VM_ASYNC
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
 board=custom
-isbadioc=true
+isbadioc=false
