--- a/OpenPowerCount.ioc
+++ b/OpenPowerCount.ioc
@@ -52,7 +52,7 @@ PA5.Locked=true
 PA5.PinState=GPIO_PIN_SET
 PA5.Signal=GPIO_Output
 PA6.GPIOParameters=PinState,GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultOutputPP
-PA6.GPIO_Label=YearControl
+PA6.GPIO_Label=dayControl
 PA6.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_PP
 PA6.GPIO_PuPd=GPIO_PULLUP
 PA6.Locked=true
