--- a/OpenPowerCount.ioc
+++ b/OpenPowerCount.ioc
@@ -11,15 +11,16 @@ Mcu.Name=STM32F030F4Px
 Mcu.Package=TSSOP20
 Mcu.Pin0=PA0
 Mcu.Pin1=PA2
+Mcu.Pin10=VP_SYS_VS_Systick
 Mcu.Pin2=PA3
-Mcu.Pin3=PA5
-Mcu.Pin4=PA6
-Mcu.Pin5=PA7
-Mcu.Pin6=PB1
-Mcu.Pin7=PA13
-Mcu.Pin8=PA14
-Mcu.Pin9=VP_SYS_VS_Systick
-Mcu.PinsNb=10
+Mcu.Pin3=PA4
+Mcu.Pin4=PA5
+Mcu.Pin5=PA6
+Mcu.Pin6=PA7
+Mcu.Pin7=PB1
+Mcu.Pin8=PA13
+Mcu.Pin9=PA14
+Mcu.PinsNb=11
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F030F4Px
@@ -44,6 +45,12 @@ PA2.Mode=Asynchronous
 PA2.Signal=USART1_TX
 PA3.Mode=Asynchronous
 PA3.Signal=USART1_RX
+PA4.GPIOParameters=PinState,GPIO_PuPd,GPIO_Label
+PA4.GPIO_Label=TimesCount_OK
+PA4.GPIO_PuPd=GPIO_PULLUP
+PA4.Locked=true
+PA4.PinState=GPIO_PIN_SET
+PA4.Signal=GPIO_Output
 PA5.GPIOParameters=PinState,GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultOutputPP
 PA5.GPIO_Label=TimesCount
 PA5.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_PP
